@@ -3772,7 +3772,7 @@ stackless_call:
     f->f_lasti = INSTR_OFFSET() - 1;
     if (tstate->frame->f_back != f)
         return retval;
-    STACKLESS_UNPACK(retval);
+    STACKLESS_UNPACK(tstate, retval);
     retval = tstate->frame->f_execute(tstate->frame, 0, retval);
     if (tstate->frame != f) {
         assert(f->f_execute == slp_eval_frame_value || f->f_execute == slp_eval_frame_noval ||
@@ -3782,7 +3782,7 @@ stackless_call:
         return retval;
     }
     if (STACKLESS_UNWINDING(retval))
-        STACKLESS_UNPACK(retval);
+        STACKLESS_UNPACK(tstate, retval);
 
     x = retval;
     f->f_stacktop = NULL;
@@ -4177,7 +4177,7 @@ PyEval_EvalCodeEx(PyObject *_co, PyObject *globals, PyObject *locals,
     retval = Py_None;
     if (stackless) {
         tstate->frame = f;
-        return STACKLESS_PACK(retval);
+        return STACKLESS_PACK(tstate, retval);
     }
     else {
         if (f->f_back != NULL)
@@ -4929,11 +4929,11 @@ fast_function(PyObject *func, PyObject ***pp_stack, int n, int na, int nk)
         }
 #ifdef STACKLESS
         f->f_execute = PyEval_EvalFrameEx_slp;
-        if (slp_enable_softswitch) {
+        if (STACKLESS_POSSIBLE()) {
             Py_INCREF(Py_None);
             retval = Py_None;
             tstate->frame = f;
-            return STACKLESS_PACK(retval);
+            return STACKLESS_PACK(tstate, retval);
         }
         return slp_eval_frame(f);
 #else
